--- a/DictionaryApp/src/main/resources/com/example/demo3/mainScreen.fxml
+++ b/DictionaryApp/src/main/resources/com/example/demo3/mainScreen.fxml
@@ -13,7 +13,7 @@
          <font>
             <Font size="14.0" />
          </font></Label>
-      <Button layoutX="44.0" layoutY="67.0" mnemonicParsing="false" onAction="#translation" prefHeight="26.0" prefWidth="90.0" style="-fx-background-color: #90EE90; -fx-border-color: #6B8E23;" text="Translation" />
+      <Button layoutX="44.0" layoutY="67.0" mnemonicParsing="false" onAction="#translate" prefHeight="26.0" prefWidth="90.0" style="-fx-background-color: #90EE90; -fx-border-color: #6B8E23;" text="Translation" />
       <Button layoutX="193.0" layoutY="66.0" mnemonicParsing="false" onAction="#addWord" prefHeight="26.0" prefWidth="90.0" style="-fx-background-color: #90EE90; -fx-border-color: #6B8E23;" text="Add Word" />
       <Button layoutX="334.0" layoutY="67.0" mnemonicParsing="false" onAction="#deleteWord" prefHeight="26.0" prefWidth="90.0" style="-fx-background-color: #90EE90; -fx-border-color: #6B8E23;" text="Delete Word" />
       <Button layoutX="477.0" layoutY="67.0" mnemonicParsing="false" onAction="#editWord" prefHeight="26.0" prefWidth="90.0" style="-fx-background-color: #90EE90; -fx-border-color: #6B8E23;" text="Edit Word" />
